--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
 
         function showFinal() {
 
-            if (originalMarksThatUserGet > QueAns.length / 0.75 && originalMarksThatUserGet <= QueAns.length) {
+            if (originalMarksThatUserGet > (QueAns.length * 0.75) && originalMarksThatUserGet <= (QueAns.length)) {
                 document.getElementById('status').innerText = "Excellent 🎉"
                 document.getElementById('scoreText').innerText = "Scored up to 75% ";
                 document.getElementById('question').innerHTML = `<h1 style="color:green;">${originalMarksThatUserGet}/${QueAns.length}</h1><p>${originalMarksThatUserGet} question answered correctly.</p><p><b style="color:green;">Passed</b></p>`;
-            } else if (originalMarksThatUserGet > QueAns.length / 0.50 && originalMarksThatUserGet < QueAns.length / 0.75) {
+            } else if (originalMarksThatUserGet > (QueAns.length * 0.50) && originalMarksThatUserGet < QueAns.length * 0.75) {
                 document.getElementById('status').innerText = "Good 👍🏻"
                 document.getElementById('scoreText').innerText = "Scored up to 50% ";
                 document.getElementById('question').innerHTML = `<h1 style="color:orange;">${originalMarksThatUserGet}/${QueAns.length}</h1><p>${originalMarksThatUserGet} question answered correctly.</p><p><b style="color:orange;">Passed</b></p>`;
-            } else if (originalMarksThatUserGet < QueAns.length / 0.50) {
+            } else if (originalMarksThatUserGet < (QueAns.length * 0.50)) {
                 document.getElementById('status').innerText = "Try Again 🔴"
                 document.getElementById('scoreText').innerText = "Scored lower than 50% ";
                 document.getElementById('question').innerHTML = `<h1 style="color:red;">${originalMarksThatUserGet}/${QueAns.length}</h1><p>${originalMarksThatUserGet} question answered correctly.</p><p><b style="color:red;">Failed</b></p>`;
@@ -341,5 +341,6 @@
 
 
 </html>
+
 
 
